syntax = "proto3";

package kvstore;

service Kvstore {
    rpc Put (PutRequest) returns (PutResponse) {};
    rpc Get (GetRequest) returns (GetResponse) {};

    // example api
    rpc SayHello(HelloRequest) returns (HelloReply) {};
    rpc SayHelloStreamReply(HelloRequest) returns (stream HelloReply) {};
}

message PutRequest {
    string key = 1;
    string value = 2;
}

message PutResponse {
    bool success = 1;
    string master_addr = 2;
}

message GetRequest {
    string key = 1;
}

message GetResponse {
    bool success = 1;
    string master_addr = 2;
    string value = 3;
}

message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 1;
}